# xonedex

./: .gitignore  GITHUB_PUBLISHING.md  LICENSE  README.md
frontend-v2/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-v2/public/: mainnet-token-list.json  official-token-list.json
frontend-v2/public/social/: x-bio-options.txt  x-bio.txt
frontend-v2/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend-v2/src/components/: DisclaimerModal.tsx
frontend-v2/src/config/: token-lists.ts  x1-native.ts  x1-network.ts  x1-tokens.ts  x1.ts
frontend-v2/src/hooks/: useClmmPool.ts  useToast.tsx  useUnifiedPool.ts  useV2AmmPool.ts
frontend-v2/src/lib/: WalletProvider.tsx
frontend-v2/src/pages/: Liquidity.tsx  Swap.tsx
frontend-v2/src/services/: price-service.ts  token-list-service.ts  token-metadata-service.ts
frontend-v2/src/store/: useNetworkStore.ts  useSettingsStore.ts  useSwapStore.ts  useTokenStore.ts
frontend-v2/src/stores/: useAppStore.ts
frontend-v2/src/utils/: clmmSwap.ts  debounce.ts  nativeLiquidity.ts  nativePool.ts  nativeSwap.ts  swapCache.ts  tokenAccount.ts  tokenProgram.ts  unifiedLiquidity.ts  unifiedSwap.ts  unwrapXNT.ts  v2AmmLiquidity.ts  v2AmmPool.ts  v2AmmPoolState.ts  v2AmmSwap.ts
smart-contracts/: Anchor.toml  Cargo.toml
smart-contracts/programs/ammv2/: Cargo.toml
smart-contracts/programs/ammv2/src/: error.rs  lib.rs  state.rs  utils.rs
smart-contracts/programs/ammv2/src/instructions/: init_pool.rs  liquidity.rs  mod.rs  native_pool.rs  swap.rs
(+20 files in other folders)
