[workspace]
resolver = "2"
members = ["programs/*"]

[profile.test]
opt-level = 0

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# Patch solana-zk-token-sdk to fix compilation errors with Solana 2.1.0
# Use a version that's compatible with solana-program 2.3.0
solana-zk-token-sdk = { git = "https://github.com/solana-labs/solana", branch = "master", default-features = false }
